--- a/css/styles.css
+++ b/css/styles.css
@@ -121,22 +121,48 @@ h1, фон #ffffff;
     }
     /*навигация*/
     .nav-link {
+        position: relative;
+        display: block;
+        
         padding-top: 32px;
         padding-bottom: 32px;
-        display: block;
-    
-        color: var(--nav-color);
+       
+        
         font-weight: 500;
         line-height: 1.14;
         letter-spacing: 0.02em;
         text-decoration: none;
+           
+        
     }
+     
+
+    .nav-link::after {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        display: block;
+        width: 100%;
+        height: 4px;
+        background-color: var(--accent-color);
+        border-radius: 2px;
     
+        transform: scaleX(0);
+        transition: transform var(--time-duration) var(--timing-function);
+    }
+
     .nav-link:hover,
     .nav-link:focus {
         color: var(--accent-color);
     }
+
+    .nav-link:hover::after,
+    .nav-link:focus::after {
+        transform: scaleX(1);
+    }
     
+
     /* шапка сайта */
     .header-link-mail {
         color: inherit;
@@ -245,7 +271,96 @@ h1, фон #ffffff;
     
         padding: 10px 32px;
         justify-content: center;
-       
+    }
+
+    /* Modal window */
+    .backdrop {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.2);
+        opacity: 1;
+        visibility: visible;
+    }
+
+    .backdrop.is-hidden {
+        opacity: 0;
+        pointer-events: none;
+        visibility: hidden;
+    }
+    .modal {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+
+        width: 528px;
+        height: 581px;
+        padding: 15px;
+        border-radius: 4px;
+        background-color: #ffffff;
+
+        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+
+
+    }
+
+    .close-modal {
+        position: absolute;
+        top: 8px;
+        right: 8px;
+
+        width: 30px;
+        height: 30px;
+        border: 1px solid rgba(0, 0, 0, 0.1); 
+        border-radius: 50%;
+        
+        background: #FFFFFF;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .close-modal-icon {
+        width: 18px;
+        height: 18px;
+        fill: currentColor;
+    }
+    .send-modal-icon {
+        
+        position: absolute;
+        bottom: 40px;
+        left: 164px;
+        width: 200px;
+        height: 50px;    
+        border: transparent;
+        border-radius: 4px;
+        
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 1.875;
+        color: #ffffff;
+        background-color: var(--accent-color);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+    }
+    
+    .send-modal-text {
+
+        font-size: 20px;
+        font-weight: 700;
+        line-height: 1.15;
+        text-align: center;
+        
+        color: var(--nav-color);
+        
     }
     
     /*Преимущества*/
@@ -616,6 +731,7 @@ h1, фон #ffffff;
     }
     
     .project-item {
+        position: relative;
         margin-left: 30px;
         margin-bottom: 30px;
     }
@@ -644,4 +760,20 @@ h1, фон #ffffff;
         font-size: 16px;
         line-height: 1.88;
         
+    }
+    .container-action {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: var(--accent-color);
+    }
+    .project-link-text-action {
+        
+        font-size: 18px;
+        line-height: 1.555;
+        text-align: left;
+        
+        color: #ffffff;
     }
