--- a/css/styles.css
+++ b/css/styles.css
@@ -475,7 +475,7 @@ h1, фон #ffffff;
 
     }
     
-    /* Мастера */
+    /* Персонал */
     .section-masters {
         background-color: var(--team-background);
     
