--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,7 @@ h1, фон #ffffff;
     }
     .nav-list{
         display: flex;
+        
     }
     .contacts {
         display: flex;
@@ -130,18 +131,16 @@ h1, фон #ffffff;
         padding-top: 32px;
         padding-bottom: 32px;
        
-        
+        color: var(--nav-color);
         font-weight: 500;
         line-height: 1.14;
         letter-spacing: 0.02em;
-        text-decoration: none;
-           
+        text-decoration: none;     
         
         transition: color var(--time-duration) var(--timing-function);
     }
      
-
-    .nav-link::after {
+    /* .nav-link::after {
         content: '';
         position: absolute;
         bottom: 0;
@@ -151,18 +150,38 @@ h1, фон #ffffff;
         height: 4px;
         background-color: var(--accent-color);
         border-radius: 2px;
-    
+        
+        opacity: 0;
+
+        transform: scaleX(0);
+        transition: transform var(--time-duration) var(--timing-function),  color var(--time-duration) var(--timing-function); 
+    } */
+
+    .nav-link:hover,
+    .nav-link:focus{
+        color: var(--accent-color);       
+    }
+
+    .nav-link.current::after {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        display: block;
+        width: 100%;
+        height: 4px;
+        background-color: var(--accent-color);
+        border-radius: 2px;
+        
+        opacity: 1;
+
         transform: scaleX(0);
         transition: transform var(--time-duration) var(--timing-function),  color var(--time-duration) var(--timing-function); 
     }
 
-    .nav-link:hover,
-    .nav-link:focus {
-        color: var(--accent-color);
-    }
-
-    .nav-link:hover::after,
+    .nav-link:hover::after ,
     .nav-link:focus::after {
+        opacity: 1;
         transform: scaleX(1);
     }
     
@@ -278,18 +297,24 @@ h1, фон #ffffff;
         position: fixed;
         top: 0;
         left: 0;
-        width: 100%;
-        height: 100%;
+        width: 100vw;
+        height: 100vh;
         background-color: rgba(0, 0, 0, 0.2);
-        border-radius: 4px;
-        opacity: 1;
-        visibility: visible;
+        /* border-radius: 4px; */
+        /* opacity: 1;
+        visibility: visible; */
+
+        transition: opacity var(--time-duration) var(--timing-function), visibility var(--time-duration) var(--timing-function);
     }
 
-    .backdrop.is-hidden {
+    .is-hidden {
         opacity: 0;
         pointer-events: none;
         visibility: hidden;
+    }
+
+    .backdrop.is-hidden .modal {
+        
     }
     .modal {
         position: absolute;
@@ -299,14 +324,17 @@ h1, фон #ffffff;
 
         width: 528px;
         height: 581px;
-        padding: 15px;
+        /* padding: 15px; */
         border-radius: 4px;
         background-color: #ffffff;
 
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 
-
+        
+       
     }
+
+    
 
     .close-modal {
         position: absolute;
